# ai-remote

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
approver/: __init__.py  handler-config.example.json  hook.py  protocol.py  registration_handler.py  responder-config.example.json  responder.py
lib/: __init__.py  bus.py  config.py  crypto.py
nats/: docker-compose.yml
scripts/: e2e-approval.cmd  e2e-registration.cmd
tests/: conftest.py  test_bus.py  test_config.py  test_crypto.py  test_hook.py  test_protocol.py  test_registration_handler.py  test_responder.py
